--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "mailparser": "^3.7.3",
     "ms": "^2.1.3",
     "mysql2": "^3.12.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
